ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    name: myingress
spec:
  tls:
    - hosts:
        - todonodeapp.com
      secretName: my-tls-secret
  rules:
    - host: todonodeapp.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: node-app-service
                port:
                  number: 30002
