testing-ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodeapp-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-app
  template:
    metadata:
      labels:
        app: node-app
    spec:
      containers:
        - name: todo-node-app
          image: syedshah642/todo-node-app:latest
          ports:
            - containerPort: 8000
      imagePullSecrets:
        - name: dockerHub-secret

---
apiVersion: v1
kind: Service
metadata:
  name: node-app-service
spec:
  type: LoadBalancer
  selector:
    app: node-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 30002

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    name: myingress
spec:
  tls:
    - hosts:
        - todonodeapp.com
      secretName: my-tls-secret
  rules:
    - host: todonodeapp.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: node-app-service
                port:
                  number: 30002
